--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Moutii Riabi
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+I'm software engineer student in higher institute of computer science ( ISI )
