add my cv gatsby

--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -3,9 +3,9 @@
 ##### Personal information
 
 * Nationality : Tunisian
-* Date of Birth : 21/08/1996
-* Mobile : +216 55 589 087
-* Email : j.hamza@hotmail.fr
+* Date of Birth : 11/06/1996
+* Mobile : +216 53 524 911
+* Email : riabimoutii@hotmail.fr
 
 ##### Skills
 
