--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-You can find me on other platforms: [LinkedIn](https://www.linkedin.com/in/hamza-jabri-aa3474127/) & [Github](https://github.com/jhamza21)
+You can find me on other platforms: [LinkedIn](https://www.linkedin.com/in/moutii-riabi/) & [Github](https://github.com/moutii96/)
